--- a/code/README
+++ b/code/README
@@ -1,7 +1,9 @@
-Only Declaretion Completed.
-Statement parsing will be done later
 Not supporting COMMENTS
 
-The Tree is printed by pointers
-We can now only show the address of the Node and the address of the children of the Node
-So the Tree is ABSTRACT and need to be checked manually
+Scan & Parse : Done
+
+Symbol Table : Done
+
+Type check : TODO
+
+Code gen : TODO
